Allow find chatter to authenticated users

--- a/server/component-config.json
+++ b/server/component-config.json
@@ -1,5 +1,14 @@
 {
-  "loopback-component-jsonapi": {},
+  "loopback-component-jsonapi": {
+    "exclude": [
+      {
+        "model": "chatter",
+        "methods": [
+          "login"
+        ]
+      }
+    ]
+  },
   "loopback-component-explorer": {
     "mountPath": "/explorer"
   }
